--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,20 +31,20 @@
                     <dd><a href="register.html" target="myiframe">注册</a></dd>
                 </dl>
             </li>
-            <li class="layui-nav-item"><a href="/logout.do" ><i style="font-size: 20px;" class="layui-icon layui-icon-logout"></i>退出</a></li>
+            <li class="layui-nav-item"><a href="logout.do" ><i style="font-size: 20px;" class="layui-icon layui-icon-logout"></i>退出</a></li>
         </ul>
     </div>
     <div class="layui-side layui-bg-black">
         <div class="layui-side-scroll">
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
             <ul class="layui-nav layui-nav-tree" lay-filter="test">
-                <li class="layui-nav-item"><a href="/route_list.html?cid=1" target="myiframe">境内跟团</a></li>
-                <li class="layui-nav-item"><a href="/route_list.html?cid=2" target="myiframe">境内自助</a></li>
-                <li class="layui-nav-item"><a href="/route_list.html?cid=3" target="myiframe">周边/自驾</a></li>
-                <li class="layui-nav-item"><a href="/route_list.html?cid=4" target="myiframe">出境短线</a></li>
-                <li class="layui-nav-item"><a href="/route_list.html?cid=5" target="myiframe">出境长线</a></li>
-                <li class="layui-nav-item"><a href="/route_list.html?cid=6" target="myiframe">出境自助</a></li>
-                <li class="layui-nav-item"><a href="/route_list.html?cid=7" target="myiframe">海岛</a></li>
+                <li class="layui-nav-item"><a href="route_list.html?cid=1" target="myiframe">境内跟团</a></li>
+                <li class="layui-nav-item"><a href="route_list.html?cid=2" target="myiframe">境内自助</a></li>
+                <li class="layui-nav-item"><a href="route_list.html?cid=3" target="myiframe">周边/自驾</a></li>
+                <li class="layui-nav-item"><a href="route_list.html?cid=4" target="myiframe">出境短线</a></li>
+                <li class="layui-nav-item"><a href="route_list.html?cid=5" target="myiframe">出境长线</a></li>
+                <li class="layui-nav-item"><a href="route_list.html?cid=6" target="myiframe">出境自助</a></li>
+                <li class="layui-nav-item"><a href="route_list.html?cid=7" target="myiframe">海岛</a></li>
             </ul>
         </div>
     </div>
