--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -59,7 +59,7 @@
     </form>
 </div>
 <script src="js/jquery-3.3.1.min.js"></script>
-<script src="/layui/layui.all.js"></script>
+<script src="layui/layui.all.js"></script>
 <script>
     !function () {
         //无需再执行layui.use()方法加载模块，直接使用即可
