--- a/src/main/webapp/favorite_list.html
+++ b/src/main/webapp/favorite_list.html
@@ -54,6 +54,8 @@
             /*,toolbar: '#toolbarDemo'*/
             ,cellMinWidth: 80 //全局定义常规单元格的最小宽度，layui 2.2.1 新增
             ,page: true //开启分页
+            ,limit:5
+            ,limits:[3,4,5,6,7,8,9,10]
             ,cols: [[
                 {field:'title', title: '路线名称'}
                 ,{field:'name', title: '路线类型'} //width 支持：数字、百分比和不填写。你还可以通过 minWidth 参数局部定义当前单元格的最小宽度，layui 2.2.1 新增
